figue/tests/integration/snapshots/main__integration__err__error_unknown_argument.snap
---
source: crates/figue/tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: unknown flag: --c0ncurrency. Did you mean '--concurrency'?
   ╭─[ <cli>:1:1 ]
   │
 1 │ --c0ncurrency
   │ ──────┬──────  
   │       ╰──────── unknown flag: --c0ncurrency. Did you mean '--concurrency'?
───╯
